--- a/index.html
+++ b/index.html
@@ -251,7 +251,25 @@ function endGame(success) {
   gameDiv.style.display = 'none';
   endScreen.style.display = 'flex';
   if (success) {
-    endScreen.innerHTML = `<h2>🎉 Congratulations!</h2><p>You guessed all words in time!</p><button onclick="location.reload()">Play Again</button>`;
+    endScreen.innerHTML = `<h2>🎉 Congratulations!</h2><p>You guessed all words in time! Though I thought you would be much quicker considering how easy-peasy it was for a big-brain like you. :P On a serious note...</p>
+<p>🎉 Happy Birthday to My Husband! 🎂</p>
+<p></p>
+<p>To the man who never fails to annoy me, make me laugh, drive me crazy, and steal my heart all over again—</p>
+<p>This birthday is extra special because it’s your first one as my husband.</p>
+<p></p>
+<p>Thank you for filling the past month with joy, your playfulness, your cheeky smiles, and that endless love only you can give. You are the sweetest trouble I could ever wish for, and I wouldn’t trade a single moment of this new chapter we’ve started together.</p>
+<p></p>
+<p>May your birthday be filled with everything that makes you happiest (including me, obviously), lots of laughter, and just the right amount of mischief.</p>
+<p></p>
+<p>I love you more than words—and all your adorable antics—can say.</p>
+<p>Here’s to a lifetime of adventures as husband and wife. 💖</p>
+<p></p>
+<p>Happy Birthday, my love! 🥳✨</p>
+<p></p>
+<p>- BOU.</p>
+
+
+<button onclick="location.reload()">Play Again</button>`;
   } else {
     endScreen.innerHTML = `<h2>⏳ Time's Up!</h2><p>Better luck next time.</p><button onclick="location.reload()">Try Again</button>`;
   }
