--- a/index.html
+++ b/index.html
@@ -68,6 +68,28 @@
     color: #3fb950;
     font-size: 1.5em;
   }
+@media (max-width: 600px) {
+  body {
+    font-size: 18px;
+  }
+  h1 {
+    font-size: 26px;
+  }
+  h2 {
+    font-size: 20px;
+  }
+  input[type="text"] {
+    font-size: 20px;
+    width: 80%;
+  }
+  button {
+    font-size: 20px;
+  }
+  .hint {
+    font-size: 18px;
+  }
+}
+
 </style>
 </head>
 <body>
